objects/PC_Remote_Service_Log_Info__e.object
<CustomObject>
    <description>Object to hold information about the published callback info</description>
    <fields>
        <fullName>PC_Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Callback_Request__c</fullName>
        <description>Used to store callback request</description>
        <label>Callback Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Callback_Response__c</fullName>
        <description>Used to store callback response</description>
        <label>Callback Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Callback_URL2__c</fullName>
        <description>Stores the Service Callback URL</description>
        <label>Callback URL2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Callback_URL__c</fullName>
        <description>&quot;DEPRECATED BY PRODUCT
Use PC_Callback_URL2__c &quot;</description>
        <label>Callback URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Running_User__c</fullName>
        <label>Running User</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Service_Name__c</fullName>
        <label>Service Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Remote Service Log Info</label>
    <pluralLabel>Remote Service Log Info</pluralLabel>
</CustomObject>